eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backpacking-map-ingress
spec:
  rules:
  - http:
      paths:
      - path: /backpacking-map
        pathType: Prefix
        backend:
          service:
            name: backpacking-map
            port:
              name: web
